--- a/style.css
+++ b/style.css
@@ -26,22 +26,22 @@ header {
 
 .image-desc-holder {
     position: absolute;
-    bottom: 5em;
-    left: 2.5em;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.6);
-    height: 20vh;
-    width: 60vw;
+    height: 30vh;
+    width: 100%;
     padding: 1em 0 0 2em;
 }
 
 .image-desc {
     color: whitesmoke;
-    margin-bottom: 0.5em;
+    font-size: 3rem;
+    margin-bottom: 0.2em;
 }
 
 .artist {
     color: whitesmoke;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
     font-weight: 400;
     margin-bottom: 1em;
 }
