--- a/style.css
+++ b/style.css
@@ -5,82 +5,64 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body {
+header {
+    position: relative;
+    min-height: 100vh;
+}
+
+img {
+    display : block;
+}
+
+.image-holder {
     height: 100vh;
     width: 100%;
-    background-image: url(background-image.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-header {
-    height: 8%;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
     color: whitesmoke;
-    white-space: nowrap;
-    font-size: 1.2rem;
-    font-weight: 600;
+    position: relative;
 }
 
-.img-slider {
-    display: inline-block;
-    text-align: center;
-    margin: 1em 45%;
+.image-holder img {
+    display: block;
 }
 
-.image-desc-holder {
+.image-holder .external-container {
     position: absolute;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    height: 30vh;
     width: 100%;
-    padding: 1em 0 0 1.4em;
-    white-space: nowrap;
+    height: 30%;
+    padding: 1em 0 0 2em;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
-.image-desc {
-    color: whitesmoke;
-    font-size: 2.5rem;
+.image-holder .external-container .image-desc {
+    font-size: 3rem;
     margin-bottom: 0.2em;
 }
 
-.artist {
-    color: whitesmoke;
-    font-size: 1rem;
-    font-weight: 400;
-    margin-bottom: 1em;
+.image-holder .external-container .artist {
+    margin-bottom: 0.3em;
 }
 
-#btn {
+.image-holder .external-container #btn {
     padding: 0.5em 1em;
-    background-color: whitesmoke;
-    font-size: 1.2rem;
-    font-weight: 600;
+    font-size: 1.5rem;
     border: none;
+    background-color: whitesmoke;
     color: black;
+    font-weight: 700;
     cursor: pointer;
     transition: all 0.5s;
 }
 
-#btn:hover {
+.image-holder .external-container #btn:hover {
     background-color: black;
     color: whitesmoke;
 }
 
-@media screen and (max-width: 600px) {
+.hidden {
+    display: none;
+}
 
-    .image-desc {
-        font-size: 1.5rem;
-    }
-    
-    .artist {
-        font-size: 1rem;
-    }
-
-    #btn {
-        padding: 0.25em 0,5em;
-        font-size: 1rem;
-    }
-    
+.active {
+    display: block;
 }
